Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p>The city is divided into 15 municipal districts lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pulvinar tincidunt tellus eu auctor. Suspendisse lacinia lectus a urna scelerisque vehicula. Nunc vehicula sodales sollicitudin. </p>
       <img src="./images/transportation/camels-in-truck.jpg" alt="camels-in-truck">
       <h3>Sources</h3>
-      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
+      <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>/n
       <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
     </div>
   </div>
